--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
 title: "Software Verification 2025"
+repository: mariojppereira/software-verification-nsst/2025
 
 markdown: GFM
 plugins:
