Trying to remove the title page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Software Verification
+title: null
 repository: "mariojppereira/software-verification-nsst"
 description: Software Verification Course at Nova School of Science and Technology
 
