Yet another attempt at removing the page's title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 # Site settings
+name: software verification
 title: null
 repository: "mariojppereira/software-verification-nsst"
 description: Software Verification Course at Nova School of Science and Technology
